Aenderung Datum Versammlung

--- a/satzung.tex
+++ b/satzung.tex
@@ -11,7 +11,7 @@
 \title{Satzung des Vereins \unsername} % §25 BGB
 \author{\unsername}
 %\date{\today}
-\date{10. April 2023} % Versammlungsdatum
+\date{10.  Mai 2023} % Versammlungsdatum
 
 \begin{document}
 
@@ -57,8 +57,7 @@ Zusatz `e.V.'
 
 \item Zusammenarbeit mit Schulen und anderen Bildungseinrichtungen durch entsprechende Vortrags- und Workshopangebote.
 
-\item Vorbereitung und Durchführung von Forschungsprojekten mit dem Schwerpunkt der Befähigung interessierter Laien (Citizen Science) zur Erhebung eigener Forschungsdaten und Beobachtungen. Dafür wird insbesondere digitale Infrastruktur bereitgestellt. Erhobene Daten und Erkenntnisse der Forschungsprojekte werden auf vereinseigenen Webseiten der Öffentlichkeit frei zu Verfügung gestellt und durch Vorträge, Workshops und weitere Öffentlichkeitsarbeit begleitet.
-
+\item Vorbereitung und Durchführung von Forschungsprojekten mit \\ dem Schwerpunkt der Befähigung interessierter Laien (Citizen  \\ Science) zur Erhebung eigener Forschungsdaten und Beobachtungen. Dafür wird insbesondere digitale Infrastruktur bereitgestellt. Erhobene Daten und Erkenntnisse der Forschungsprojekte werden auf vereinseigenen Webseiten der Öffentlichkeit frei zu Verfügung gestellt und durch Vorträge, Workshops und weitere Öffentlichkeitsarbeit begleitet.
 \end{enumerate}
 
 \item Der Verein verfolgt ausschließlich und unmittelbar gemeinnützige Zwecke 
